# norway-real-estate-price-estimator

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  api.Dockerfile  docker-compose.yml  healthcheck.py  hello.py  pyproject.toml  worker.Dockerfile
.github/workflows/: ci.yml  docker-build.yml
app/: celery_app.py  config.py  dependencies.py  main.py  routes.py  schemas.py
app/api/: examples.py
app/api/routes/: metrics.py
app/clients/: api_client.py
app/ml/: base.py  metrics_summary.py  registry.py  sklearn_predictor.py  stub.py
app/observability/: logging.py  prometheus.py  request_id.py
app/services/: estimate_service.py
app/storage/: s3.py
app/tasks/: __init__.py  retrain.py  rolling.py
app/training/: dataset.py  fetch.py  gating.py  metrics.py  modeling.py  pipeline.py  publish.py  rolling.py  snapshots.py  versioning.py  window.py
app/worker/: celery_app.py  tasks.py
deploy/: Dockerfile
deploy/helm/: Chart.yaml  values.yaml  values_gke.yaml  values_kind.yaml
deploy/helm/templates/: _helpers.tpl
deploy/helm/templates/cronjobs/: training.yaml
deploy/helm/templates/deployments/: deployment_api.yaml  deployment_minio.yaml  deployment_worker.yaml  deployment_worker_training.yaml
deploy/helm/templates/jobs/: minio_init.yaml
deploy/helm/templates/pvc/: minio_pvc.yaml
deploy/helm/templates/services/: service_api.yaml  service_minio.yaml
deploy/prometheus/: prometheus.yml
scripts/: bootstrap_model_registry.py  rolling_12m.py  train.py  train_previous_month.py
tests/: conftest.py  test_estimate_contract.py  test_estimate_validation_batch.py  test_health.py  test_healthz.py  test_prometheus_metrics.py  test_registry.py  test_registry_bootstrap_smoke.py  test_rolling_chain.py  test_s3_storage.py  test_tasks.py  test_training_dataset.py  test_training_gating.py  test_training_metrics.py  test_training_modeling.py  test_training_window.py
