[project]
name = "norway-real-estate-price-estimator"
version = "1.0.0"
description = "Production-grade AI system for current real estate price estimation in Norway"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Maksym Zyultsle" }]
dependencies = [
    "boto3>=1.42.30",
    "celery>=5.6.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.40.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.1",
    "catboost>=1.2.8",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.12.10",
    "pre-commit>=4.2.0",
    "honcho>=2.0.0",
    "watchfiles>=1.1.1",
]

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
    "build",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E203", "B008", "B904", "B905", "N818", "B006"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-third-party = ["fastapi", "uvicorn", "pydantic", "pydantic_settings"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings -q"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning:transformers",
  "ignore::UserWarning:transformers",
  "ignore::FutureWarning:transformers",
  "ignore::ImportWarning:torch"
]

